--- a/global_transformations/path_breaker.tex
+++ b/global_transformations/path_breaker.tex
@@ -129,7 +129,7 @@ Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\frpb\psi'$. W
 
 \TODO{Make sure it is correct to refer to this kind of $ai$-decomposed form.}
 
-Since the evidenced interaction and cut vertices belong to the same connected component, we can construct the following $\ai$-decomposed form of $\Phi$:
+Since the evidenced interaction and cut vertices belong to the same connected component, we can, using Remark~\vref{remark:AlternativeAiDecomposedForm}, construct the following $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
