--- a/global_transformations/isolated_subflow.tex
+++ b/global_transformations/isolated_subflow.tex
@@ -1,7 +1,5 @@
 \TODO{Throughout: use `isolated subflow' and define it somewhere else.}
 
-\TODO{Do I need to put: `for some upper edges $\boldsymbol\epsilon$ and lower edges $\boldsymbol\iota$' in the following definition?}
-
 \newcommand{\fris}{{\mathsf{is}}}
 %---------------------------------------
 \begin{definition}\label{definition:IsolatedSubflowRemoval}
@@ -39,17 +37,13 @@ We define the reduction $\to_\fris$ (where $\fris$ stands for \emph{isolated sub
 Reduction\/ $\to_\fris$ is sound.
 \end{theorem}
 
-\TODO{Put reference to definition of general contraction.}
-
-\TODO{Make a remark somewhere about the kind of trickery we do here with the $\ai$-decomposed form and Formalism A notation.}
-
 \TODO{Is it ok to refer to the definition in this way and then use the labels we defined there? (this is the way it was done in the paper).}
 
 %---------------------------------------
 \begin{proof}
 Let $\Phi$ be a derivation with flow $\phi'$, such that $\phi'\to_\fris\psi'$. We show that there exists a derivation $\Psi$ with flow $\psi'$ and with the same premiss and conclusion as $\Phi$. In the following, we refer to the figure in Definition~\vref{definition:IsolatedSubflowRemoval}.
 
-Since $\psi$ is connected we can assume that the $\ai$-decomposed form of $\Phi$ is
+Since $\psi$ is connected, we assume, using Remark~\vref{remark:AlternativeAiDecomposedForm}, that the following derivation is an $\ai$-decomposed form of $\Phi$:
 \[
 \vlder{\Phi'}{}
 {
