Proved that the FourBoxes gives a SimpleForm

--- a/global_transformations/four_boxes.tex
+++ b/global_transformations/four_boxes.tex
@@ -175,5 +175,5 @@ Given an atomic flow $\phi$ and a polarity assignment $\pi$, let $\psi$ be the a
 \TODO{Check:}
 
 \begin{remark}\label{remark:FourBoxesDestroySimpleForm}
-Given a polarity assignment $\pi$, and two atomic flows $\phi$ and $\psi$ such that $\phi\to_\frfb\psi$, $\phi$ is not weakly streamlined with respect to $\pi^{-1}$, and $\psi$ is on simple form with respect to $\pi$, then $\psi$ is not on simple form with respect to $\pi^{-1}$.
+Given an atomic flow $\phi$ and a polarity assignment $\pi$, such that $\phi$ is not weakly streamlined with respect to $\bar\pi$, then $\Simpl(\phi,\pi)$ is not on simple form with respect to $\bar\pi$.
 \end{remark}
