--- a/normal_forms.tex
+++ b/normal_forms.tex
@@ -249,7 +249,7 @@ respectively.
 \TODO{Define the polarity assignment used here.}
 
 %---------------------------------------
-\begin{definition}\label{definition:FlowSimple}
+\begin{definition}\label{definition:FlowSimpleForm}
 An atomic flow is \emph{on simple form with respect to the polarity assignment $\pi$} if it can be represented as
 \[
 \atomicflow{
